# EcoDrive

./: .gitignore  CMakeLists.txt  MCADCPWM3P_NONE_TRAP.cpp  README.md  REFACTORING_SUMMARY.md  compile_commands.json  debugStart.sh  gdb_commands.gdb  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
application/: elmotor_pmsm.c  elmotor_pmsm.h  main.cpp  pmsmControl.cpp  pmsmControl.hpp  pmsmControl_def.cpp  sensor.c  sensor.h  sys.cpp  sys.h
application/pmsmControl/: pmsmControl.cpp  pmsmControl.h
core/: elcore.h  elmath.h  ringbuffer.c  ringbuffer.h  scope_stream.h  types.h  virtual_motor.h
core/math/: math.hpp
core/motorControl/: pmsmControl.cpp  pmsmControl.h  pmsmControlScheduler.h  tapezoidalController.h  types.h
driver/: IBemfZc.h  IMCADCPWM3P.h  ISerial.h  driver_common.h  xMC_taskTicker.h
drivers/: common.h
drivers/communication/: ICan.hpp  IEthernet.hpp  IUart.hpp  IUsb.hpp
drivers/sensor/: IBemfZc.h  IBemfZc.hpp  IEncoder.h  IEncoder.hpp  IHallSensor.h  IHallSensor.hpp  ITempSensor.h  ITempSensor.hpp  IThrottle.h
drivers/stm32/: AdcManager.cpp  AdvConfig.h  PWM.cpp  pins.h
drivers/stm32f4/: MCADCPWM3P.h  driver_bsp.cpp  driver_bsp.h  driver_conf.h  hall1.cpp  hall1.h  uart1.cpp  uart1.h
drivers/stm32f4/MCADCPWM3P/: MCADCPWM3P_NONE_TRAP.cpp  MCADCPWM3P_common.cpp  MCADCPWM3P_common.h
drivers/system/: AdcManager.h  IAdcManager.h  IMCADCPWM3P.hpp  IPWM.h
middleware/: aebfv0.c  aebfv0.h
platform/: CMakeLists.txt  FreeRTOSConfig.h  platform.h
platform/USB_DEVICE/: usbd_conf.c
platform/USB_DEVICE/App/: usb_device.c
platform/cmake/: gcc-arm-none-eabi.cmake
platform/driver_core/: MCADCPWM3P.h  driver_bsp.cpp  driver_bsp.h  driver_conf.h  uart1.cpp  uart1.h  usbSerial1.cpp  usbSerial1.h
platform/driver_core/MCADCPWM3P/: MCADCPWM3P_NONE.cpp  MCADCPWM3P_TS.cpp  MCADCPWM3P_common.cpp  MCADCPWM3P_common.h  MCADCPWM3P_it.cpp  MCADCPWM3P_timeBase.cpp
platform/eldriver/: eldriver_conf.h  eldriver_hall.c  eldriver_hall.h  eldriver_mc3p.c  eldriver_mc3p.h  eldriver_mc3p_it.c  eldriver_uart.h  eldriver_usbcdc.c  eldriver_usbcdc.h
platform/host/: CMakeLists.txt  platform.c  platform.h  virtual_pmsm.c  virtual_pmsm.h
platform/host/eldriver/: eldriver_conf.h  eldriver_core.c  eldriver_core.h  eldriver_hall.c  eldriver_hall.h  eldriver_mc3p.c  eldriver_mc3p.h  eldriver_uart.h  eldriver_usbcdc.c  eldriver_usbcdc.h
platform/host/freertos_smoke/: CMakeLists.txt  FreeRTOSConfig.h  main.c
platform/stm32f4/: CMakeLists.txt  stm32f4xx_it.c
platform/stm32f4/USB_DEVICE/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.h  usbd_desc.c
platform/stm32f4/cmake/: gcc-arm-none-eabi.cmake
platform/stm32f4/eldriver/: eldriver_conf.h  eldriver_core.h  eldriver_hall.c  eldriver_hall.h  eldriver_mc3p.c  eldriver_mc3p_it.c
test/: sad
tools/: CMakeLists.txt  EcoDrive.py  aebfv0.py  aebfv0_test.py  requirements.txt
